# finetune-instruct-model

./: AGENTS.md
agentic-llm-ft/: .env.example  .gitignore  Makefile  README.md  inference.py  pyproject.toml  run_eval.py  train.py
agentic-llm-ft/configs/: config.yaml
agentic-llm-ft/configs/data/: default.yaml
agentic-llm-ft/configs/eval/: default.yaml
agentic-llm-ft/configs/experiments/: base.yaml  vertical_slice.yaml
agentic-llm-ft/configs/model/: llama3.yaml  mistral.yaml  qwen.yaml
agentic-llm-ft/configs/training/: lora.yaml  qlora.yaml
agentic-llm-ft/data/sample/: batch_prompts.txt  train.jsonl  vertical_slice_eval.jsonl
agentic-llm-ft/docs/: vertical-slice-plan.md  vertical-slice-runbook.md
agentic-llm-ft/scripts/: eval.py  inference.py  run_eval.py  train.py  verify_vertical_slice.py
agentic-llm-ft/src/agent/: __init__.py  output_parser.py  runtime.py
agentic-llm-ft/src/agentic_llm_ft.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentic-llm-ft/src/config/: loader.py
agentic-llm-ft/src/data/: __init__.py  dataset.py  validators.py
agentic-llm-ft/src/datasets/: __init__.py
agentic-llm-ft/src/eval/: __init__.py  harness.py  metrics.py
agentic-llm-ft/src/inference/: __init__.py  engine.py
agentic-llm-ft/src/prompts/: __init__.py  rendering.py
agentic-llm-ft/src/pydantic/: __init__.py
agentic-llm-ft/src/schemas/: __init__.py  dataset.py  (+1 more)
agentic-llm-ft/tests/: test_agent_runtime.py  test_dataset.py  test_eval_metrics.py  test_output_parser.py  test_prompt_rendering.py  test_tools.py  test_vertical_slice_eval.py
(+10 files in other folders)
