[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-llm-ft"
version = "0.1.0"
description = "Production-grade fine-tuning scaffold for agentic LLMs with tool-calling"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Agentic LLM Team"}]
dependencies = [
  "transformers>=4.44.0",
  "peft>=0.12.0",
  "trl>=0.10.1",
  "datasets>=2.20.0",
  "accelerate>=0.33.0",
  "bitsandbytes>=0.43.3",
  "pydantic>=2.8.0",
  "hydra-core>=1.3.2",
  "pytest>=8.2.0",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
wandb = ["wandb>=0.17.0"]
dev = ["ruff>=0.5.0", "mypy>=1.10.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
